--- a/Turtles/app/src/main/res/layout/fragment_home.xml
+++ b/Turtles/app/src/main/res/layout/fragment_home.xml
@@ -25,18 +25,19 @@
         android:backgroundTint="@color/grey"
         app:layout_constraintTop_toBottomOf="@id/add"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/listView"
+        app:layout_constraintBottom_toTopOf="@id/recyclerView"
         android:layout_marginRight="10dp"
         android:visibility="gone"/>
 
-    <ListView
-        android:id="@+id/listView"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:padding="10dp"
         app:layout_constraintTop_toBottomOf="@id/filter"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="65dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
